Add: Titles in notebook

--- a/Linear Regression/Linear Regression on Students dataset (from scratch and scikit-learn).ipynb
+++ b/Linear Regression/Linear Regression on Students dataset (from scratch and scikit-learn).ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Implementation from scratch"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -258,6 +265,13 @@
     "\n",
     "print(rmse(Y, Y_pred))\n",
     "print(r2_score(Y, Y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Implementation using scikit-learn"
    ]
   },
   {
