--- a/Association/Association.ipynb
+++ b/Association/Association.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
        "4  T500      I1, I3"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,6 +165,7 @@
     "    items = df.columns\n",
     "    countDf = df.sum()\n",
     "    countDict = countDf.loc[countDf >= s_count].to_dict()\n",
+    "    print(countDict)\n",
     "    items = list(countDict.keys())\n",
     "    combHist = []\n",
     "    combPrev = list(combinations(items, 1))\n",
@@ -187,13 +188,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def getConfidence(items_given, support_item, countDict):\n",
+    "def getConfidence(items_given, support_items, countDict):\n",
+    "    items_given.sort()\n",
+    "    support_items = support_items + items_given\n",
+    "    support_items.sort()\n",
     "    items_given_str = \"_\".join(items_given)\n",
-    "    item_support = \"_\".join([items_given_str, support_item])\n",
+    "    item_support_str = \"_\".join(support_items)\n",
+    "    item_support = item_support_str\n",
     "    items = list(countDict.keys())\n",
     "    if (items_given_str not in items) or (item_support not in items):\n",
     "        return 0\n",
@@ -203,55 +208,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'I1': 6, 'I2': 7, 'I3': 6, 'I4': 2, 'I5': 2}\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "0.5"
       ]
      },
-     "execution_count": 225,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "countDict = apriori(df, 'List', 2)\n",
-    "getConfidence([\"I1\", \"I2\"], \"I3\", countDict)"
+    "getConfidence([\"I2\", \"I1\"], [\"I5\"], countDict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "elements = [s.split(\"_\") for s in countDict.keys()]\n",
+    "elements3 = [element for element in elements if len(element) == 3]\n",
+    "elementsRest = [element for element in elements if len(element) != 3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def removeElements(list_, elements):\n",
+    "    return [e for e in list_ if e not in elements]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'I1': 6,\n",
-       " 'I1_I2': 4,\n",
-       " 'I1_I2_I3': 2,\n",
-       " 'I1_I2_I5': 2,\n",
-       " 'I1_I3': 4,\n",
-       " 'I1_I5': 2,\n",
-       " 'I2': 7,\n",
-       " 'I2_I3': 4,\n",
-       " 'I2_I4': 2,\n",
-       " 'I2_I5': 2,\n",
-       " 'I3': 6,\n",
-       " 'I4': 2,\n",
-       " 'I5': 2}"
+       "['I1']"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "countDict"
+    "removeElements([\"I1\", \"I2\", \"I3\"], [\"I2\", \"I3\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['I5']  ->  ['I1', 'I2', 'I5']   1.0\n",
+      "['I1', 'I5']  ->  ['I1', 'I2', 'I5']   1.0\n",
+      "['I2', 'I5']  ->  ['I1', 'I2', 'I5']   1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for element in elementsRest:\n",
+    "    for ele2 in elements3:\n",
+    "        if(getConfidence(element, removeElements(ele2, element), countDict) > 0.7):\n",
+    "            print(element, \" -> \", ele2, \" \", getConfidence(element, removeElements(ele2, element), countDict))"
    ]
   },
   {
