--- a/Association/Association.ipynb
+++ b/Association/Association.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,13 +17,14 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from itertools import combinations\n",
+    "from mlxtend import frequent_patterns\n",
     "\n",
     "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +100,7 @@
        "4  T500      I1, I3"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +225,7 @@
        "0.5"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,65 +237,347 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
-    "elements = [s.split(\"_\") for s in countDict.keys()]\n",
-    "elements3 = [element for element in elements if len(element) == 3]\n",
-    "elementsRest = [element for element in elements if len(element) != 3]"
+    "elements = [s.split(\"_\") for s in countDict.keys() if len(s) > 2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def removeElements(list_, elements):\n",
-    "    return [e for e in list_ if e not in elements]"
+    "minConfidence = 0.7"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['I1']"
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "removeElements([\"I1\", \"I2\", \"I3\"], [\"I2\", \"I3\"])"
+    "def getAllConfidence(elements, countDict, minConfidence):\n",
+    "    for element in elements:\n",
+    "        for comb in combinations(element, len(element) - 1):\n",
+    "            comb = list(comb)\n",
+    "            remaining = list(set(element) - set(comb))\n",
+    "            if getConfidence(comb, remaining, countDict) > minConfidence:\n",
+    "                print(comb,\"->\",remaining, getConfidence(comb, remaining, countDict))\n",
+    "            if len(element) > 2 and (getConfidence(remaining, comb, countDict) > minConfidence):\n",
+    "                print(remaining,\"->\",comb, getConfidence(remaining, comb, countDict))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['I5']  ->  ['I1', 'I2', 'I5']   1.0\n",
-      "['I1', 'I5']  ->  ['I1', 'I2', 'I5']   1.0\n",
-      "['I2', 'I5']  ->  ['I1', 'I2', 'I5']   1.0\n"
+      "['I5'] -> ['I1'] 1.0\n",
+      "['I4'] -> ['I2'] 1.0\n",
+      "['I5'] -> ['I2'] 1.0\n",
+      "['I5'] -> ['I1', 'I2'] 1.0\n",
+      "['I1', 'I5'] -> ['I2'] 1.0\n",
+      "['I2', 'I5'] -> ['I1'] 1.0\n"
      ]
     }
    ],
    "source": [
-    "for element in elementsRest:\n",
-    "    for ele2 in elements3:\n",
-    "        if(getConfidence(element, removeElements(ele2, element), countDict) > 0.7):\n",
-    "            print(element, \" -> \", ele2, \" \", getConfidence(element, removeElements(ele2, element), countDict))"
+    "getAllConfidence(elements,countDict, 0.7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "oneHotDf = convertToOnehot(df, 'List')\n",
+    "cols = ['I1', 'I2', 'I3', 'I4', 'I5']\n",
+    "oneHotDf[cols] = oneHotDf[cols].astype('bool')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "oneHotDf = oneHotDf.drop(['TID'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "freq_itemsets = frequent_patterns.apriori(oneHotDf, min_support=0.20, use_colnames=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>antecedants</th>\n",
+       "      <th>consequents</th>\n",
+       "      <th>antecedent support</th>\n",
+       "      <th>consequent support</th>\n",
+       "      <th>support</th>\n",
+       "      <th>confidence</th>\n",
+       "      <th>lift</th>\n",
+       "      <th>leverage</th>\n",
+       "      <th>conviction</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>(I5)</td>\n",
+       "      <td>(I1)</td>\n",
+       "      <td>0.222222</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>0.222222</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.500000</td>\n",
+       "      <td>0.074074</td>\n",
+       "      <td>inf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>(I4)</td>\n",
+       "      <td>(I2)</td>\n",
+       "      <td>0.222222</td>\n",
+       "      <td>0.777778</td>\n",
+       "      <td>0.222222</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.285714</td>\n",
+       "      <td>0.049383</td>\n",
+       "      <td>inf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>(I5)</td>\n",
+       "      <td>(I2)</td>\n",
+       "      <td>0.222222</td>\n",
+       "      <td>0.777778</td>\n",
+       "      <td>0.222222</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.285714</td>\n",
+       "      <td>0.049383</td>\n",
+       "      <td>inf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>(I1, I5)</td>\n",
+       "      <td>(I2)</td>\n",
+       "      <td>0.222222</td>\n",
+       "      <td>0.777778</td>\n",
+       "      <td>0.222222</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.285714</td>\n",
+       "      <td>0.049383</td>\n",
+       "      <td>inf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>(I2, I5)</td>\n",
+       "      <td>(I1)</td>\n",
+       "      <td>0.222222</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>0.222222</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.500000</td>\n",
+       "      <td>0.074074</td>\n",
+       "      <td>inf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>(I5)</td>\n",
+       "      <td>(I1, I2)</td>\n",
+       "      <td>0.222222</td>\n",
+       "      <td>0.444444</td>\n",
+       "      <td>0.222222</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.250000</td>\n",
+       "      <td>0.123457</td>\n",
+       "      <td>inf</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  antecedants consequents  antecedent support  consequent support   support  \\\n",
+       "0        (I5)        (I1)            0.222222            0.666667  0.222222   \n",
+       "1        (I4)        (I2)            0.222222            0.777778  0.222222   \n",
+       "2        (I5)        (I2)            0.222222            0.777778  0.222222   \n",
+       "3    (I1, I5)        (I2)            0.222222            0.777778  0.222222   \n",
+       "4    (I2, I5)        (I1)            0.222222            0.666667  0.222222   \n",
+       "5        (I5)    (I1, I2)            0.222222            0.444444  0.222222   \n",
+       "\n",
+       "   confidence      lift  leverage  conviction  \n",
+       "0         1.0  1.500000  0.074074         inf  \n",
+       "1         1.0  1.285714  0.049383         inf  \n",
+       "2         1.0  1.285714  0.049383         inf  \n",
+       "3         1.0  1.285714  0.049383         inf  \n",
+       "4         1.0  1.500000  0.074074         inf  \n",
+       "5         1.0  2.250000  0.123457         inf  "
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rules = frequent_patterns.association_rules(freq_itemsets, metric=\"confidence\", min_threshold=1)\n",
+    "rules[rules.confidence > minConfidence]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "oneHotDf = oneHotDf.replace([False], '?')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "oneHotDf.to_csv(\"./dataset_onehot.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using Monkey dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = pd.read_csv('./dataset2.csv')\n",
+    "df2 = df2.drop(['TID'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'E': 4, 'K': 4, 'M': 3, 'O': 3, 'Y': 3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "countDict2 = apriori(df2, 'List', 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "elements2 = [s.split(\"_\") for s in countDict2.keys() if len(s) > 2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['E'] -> ['K'] 1.0\n",
+      "['K'] -> ['E'] 1.0\n",
+      "['E'] -> ['O'] 0.75\n",
+      "['O'] -> ['E'] 1.0\n",
+      "['K'] -> ['O'] 0.75\n",
+      "['O'] -> ['K'] 1.0\n",
+      "['E', 'K'] -> ['O'] 0.75\n",
+      "['O'] -> ['E', 'K'] 1.0\n",
+      "['E', 'O'] -> ['K'] 1.0\n",
+      "['K'] -> ['E', 'O'] 0.75\n",
+      "['K', 'O'] -> ['E'] 1.0\n",
+      "['E'] -> ['K', 'O'] 0.75\n"
+     ]
+    }
+   ],
+   "source": [
+    "getAllConfidence(elements2, countDict2, 0.7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'E': 4,\n",
+       " 'E_K': 4,\n",
+       " 'E_K_O': 3,\n",
+       " 'E_O': 3,\n",
+       " 'K': 4,\n",
+       " 'K_O': 3,\n",
+       " 'M': 3,\n",
+       " 'O': 3,\n",
+       " 'Y': 3}"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "countDict2"
    ]
   },
   {
